--- a/06-token-lauchpad/token-launchpad/package.json
+++ b/06-token-lauchpad/token-launchpad/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dapp",
+  "name": "token-launchpad",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -18,23 +18,19 @@
     "@solana/wallet-adapter-wallets": "^0.19.37",
     "@solana/web3.js": "^1.98.2",
     "@tailwindcss/vite": "^4.1.11",
-    "buffer": "^6.0.3",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
-    "@types/node": "^24.0.12",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
-    "autoprefixer": "^10.4.21",
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11",
-    "vite": "^7.0.3"
+    "vite": "^7.0.4"
   }
 }
